kubernetes/web-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app.component: web
  name: web
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      labels:
        app.component: web
    spec:
      containers:
      - env:
        - name: NODE_ENV
          value: development
        - name: PORT
          value: "3000"
        image: elm-lmp-web:local
        name: web
        ports:
        - containerPort: 3000
        resources: {}
      restartPolicy: Always
status: {}
