kubernetes/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.component: elm-lmp-api
  name: elm-lmp-api
spec:
  ports:
  - port: 3001
    protocol: TCP
  selector:
    app.component: elm-lmp-api
