kubernetes/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.component: web
  name: web
spec:
  ports:
  - name: http
    port: 80
    targetPort: 3000
  selector:
    app.component: web
status:
  loadBalancer: {}
