kubernetes/web-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  name: web-ingress
spec:
  rules:
  - http:
      paths:
      - path: /?(.*)
        backend:
          serviceName: web
          servicePort: 80
