kubernetes/web.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  name: web-ingress
spec:
  rules:
  - http:
      paths:
      - path: /?(.*)
        backend:
          serviceName: web
          servicePort: 80
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.component: web
  name: web
spec:
  ports:
  - name: http
    port: 80
    targetPort: 3000
  selector:
    app.component: web
status:
  loadBalancer: {}
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app.component: web
  name: web
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      labels:
        app.component: web
    spec:
      containers:
      - env:
        - name: NODE_ENV
          value: production
        - name: PORT
          value: "3000"
        image: elm-lmp-web:local
        name: web
        ports:
        - containerPort: 3000
        resources: {}
      restartPolicy: Always
status: {}
